--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href='/reset.css'>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href='./reset.css'>
+    <link rel="stylesheet" href="./index.css">
     <title>携程在手说走就走！</title>
 </head>
 
@@ -94,7 +94,6 @@
                 <a href="#" title="特价酒店">特价酒店</a>
             </div>
             <div class="nav-items">
-
                 <a href="#" title="海外酒店">海外酒店</a>
                 <a href="#" title="特价酒店">特价酒店</a>
             </div>
